# OPP

./: readme.txt
lab1/: CMakeLists.txt  imp1.c  imp2.c  simple.c
lab2/: CMakeLists.txt  imp1.c  imp2.c  shedule.c  simple.c
lab3/: CMakeLists.txt  main.c
lab4/: CMakeLists.txt  dafaq.c  non_par.c  par.c
lab6/: main.c
thread_help/: CMakeLists.txt  inits.c  inits.h  main.c  threads.c  threads.h
